<resources>
    <string name="app_name">JetpackApps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="UserName">UserName</string>
    <string name="Password">Password</string>
    <string name="welcome">Welcome!</string>
    <string name="Signin">SignIn to get Started</string>
    <string name="forgot_passowrd">Forgot Password</string>
    <string name="title_activity_fab">FabActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>